--- a/modelo.html
+++ b/modelo.html
@@ -13,14 +13,15 @@
         <h1>LISTA DE TAREFAS</h1>
     </header>
     <section>
-    <input type="text" id="num" />
-    <button onclick="adicionar()">Adicionar</button>
-    <button onclick="apagarHistorico()">Apagar Histórico</button>
+    <input type="text" id="num" placeholder="Digite sua tarefa..." />
+    <button class="adicionar-btn" onclick="adicionar()">Adicionar</button>
+    <button class="apagar-btn" onclick="apagarHistorico()">Apagar Histórico</button>
+
     
     <div id="flista"></div> 
     </section>
     <footer>
-        <p>Design de Interface </p>
+        <p><img src="https://ene-solucoes.s3.amazonaws.com/assinatura_email.gif" alt="Logo eNe Soluções"> </p>
     </footer>
     <script src="script.js"></script>
 </body>
